# orikan

./: .dockerignore  .gitignore  README.md  desktop.ini  manage.py  my-local-sqlite.db  pyproject.toml
BinanceAPI/: admin.py  apps.py
BinanceAPI/admin/: __init__.py  account_admin.py  asset_admin.py  balance_spot_admin.py  network_admin.py  symbol_admin.py  ticker_admin.py
BinanceAPI/data_set/: BTCTUSD-1h-2023-07-06.csv  CoinCodex_BTC-ETH_MONTHLY-2010-07-18_2023-07-05.csv  CoinCodex_BTC-USD_DAILY_2010-07-18_2023-07-05.csv  Yahoo_BTC-USD_MONTHLY.csv  Yahoo_BTC-USD_WEEKLY.csv
BinanceAPI/factories/: __init__.py  account_factory.py  asset_factory.py  avg_price_factory.py  balance_factory.py  balance_spot_factory.py  base_binance_factory.py  candlestick_factory.py  deposit_factory.py  filters_factory.py  order_book_factory.py  order_factory.py  price_history_factory.py  symbol_factory.py  ticker_factory.py  trade_factory.py  trade_history_factory.py  wallet_factory.py  withdrawal_factory.py
BinanceAPI/migrations/: 0001_initial.py  0002_delete_pricehistory_remove_candlestick_asset_and_more.py  0002_maxnumberordersfilter.py  0002_withdrawal.py  0003_ticker.py  0003_trade_tradehistory_wallet.py  0004_order_orderbook.py  0005_candlestick_avgprice_avgprice_unique_symbol_mins.py  0006_basefilter_deposit_icebergpartsfilter_lotsizefilter_and_more.py
BinanceAPI/models/: __init__.py  account_model.py  asset_model.py  avg_price_model.py  balance_model.py  balance_spot_model.py  base_binance_model.py  candlestick_model.py  deposit_model.py  filters_model.py  order_book_model.py  order_model.py  price_history_model.py  symbol_model.py  ticker_model.py  trade_history_model.py  trade_model.py  wallet_model.py  withdrawal_model.py
BinanceAPI/scripts/: api_rate_limit.py  fill_account_model.py  load_coindodex_data.py
BinanceAPI/serializers/: __init__.py
BinanceAPI/tests/: __init__.py  base_authentication_api.py  base_binance_api_test.py
BinanceAPI/views/: base_binance_api.py  binance_connection.py  historical_data.py  user_data_view.py  views.py
Monitorum/: asgi.py  settings.py  urls.py  wsgi.py
PolygonAPI/: apps.py  views.py
TradingBot/: settings.py
binance_api/admin/: account_admin.py  asset_admin.py  balance_spot_admin.py  network_admin.py  symbol_admin.py  ticker_admin.py
binance_api/data_set/: CoinCodex_BTC-ETH_DAILY_2010-07-18_2023-07-05.csv  (+4 more)
chronometron/: apps.py
dispersion_shield/: .coveragerc  init_coverage.sh
orikan/: asgi.py  settings.py  urls.py  wsgi.py
tesseract-vault/: Dockerfile  Dockerfile.db  docker-compose.yml  entrypoint.sh
(+114 files in other folders)
