[tool.poetry]
name = "orikan"
version = "0.1.0"
description = ""
authors = ["IJMadalenA"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"
django-environ = "^0.10.0"
environ = "^1.0"
poetry = "^1.5.0"
binance-connector = "^3.0.0"
python-binance = "^1.0.17"
requests = "^2.31.0"
wheel = "^0.40.0"
pip = "^23.1.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
coverage = "^7.2.6"
black = "^23.3.0"
faker = "^18.9.0"
flake8-bugbear = "^23.2.13"
flake8-comprehensions = "^3.10.1"
flake8-isort = "^6.0.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
