[tool.poetry]
name = "orikan"
version = "0.1.0"
description = ""
authors = ["IJMadalenA"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"
django-environ = "^0.10.0"
environ = "^1.0"
poetry = "^1.5.0"
binance-connector = "^3.0.0"
python-binance = "^1.0.17"
requests = "^2.31.0"
wheel = "^0.40.0"
pip = "^23.1.2"
djangorestframework = "^3.14.0"
factory-boy = "^3.2.1"
django-plotly-dash = "^2.2.1"
plotly = "^5.15.0"
pandas = "^2.0.3"
django-bootstrap4 = "^23.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
coverage = "^7.2.7"
black = "^23.3.0"
flake8-bugbear = "^23.5.9"
flake8-comprehensions = "^3.12.0"
flake8-isort = "^6.0.0"
pre-commit = "^3.3.2"
pylint = "^2.17.4"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
